# agent-status-light

./: .gitignore  LICENSE  README.md  hermes_lamp.py  hermes_lamp_log_monitor.py  lamp_config.json  pyproject.toml  setup.sh
.github/workflows/: ci.yml
agent_status_light/: __init__.py  lamp.py  log_monitor.py
examples/: hermes-hooks.yaml
launchd/: com.agent-status-light.log-monitor.plist  com.hermes.lamp-log-monitor.plist
patches/: approval-lamp.patch  approval.py  clarify_tool.py
scripts/: install-macos.sh
tests/: test_lamp.py  test_log_monitor.py
